# Nutritional-AI

nutritional-AI-main/: README.md
nutritional-AI-main/backend/: .gitignore  README.md  main.py  pyproject.toml
nutritional-AI-main/frontend/: package-lock.json  package.json
nutritional-AI-main/frontend/app/: globals.css  layout.tsx  page.tsx
